# thesisRPR

./: README.md
strangecalc/: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.status  libtool
strangecalc/.svn/: wc.db
strangecalc/autom4te.cache/: output.0  requests  traces.0  traces.1
strangecalc/config/: root.m4
strangecalc/doc/: Makefile  Makefile.in  makedoc.cpp
strangecalc/share/strangecalc-wrapper/: Makefile  Makefile.am  Makefile.in
strangecalc/share/strangecalc-wrapper/data/: create_data_iso2_HE.cpp  create_electrodata_iso2.c  data_iso8.root  electrodata_iso2.root
strangecalc/share/strangecalc-wrapper/data/deuteron/: LNS-NKS2_K0_unpublished_2011.data
strangecalc/src/: DataHandler.lo  FormFactorParametrization.lo  FormFactorSpecification.lo  GammaStructure.cpp  Makefile  Makefile.in  Matrix.h  TAveragedObservable.h  TAveragedObservable.lo  TAveragedObservableDict.cpp  TAveragedObservableDict_rdict.pcm  TCGLNDiagnostic.h  TCGLNDiagnostic.lo  TCachemap.h  TCalcInfo.h  TCalcInfoDict.cpp  TCalcInfoDict_rdict.pcm  TCalcInfoLinkDef.h  TCalculateCGLNCoeff.h  TCalculateCGLNCoeff.lo  TCalculateConsistentCoeff.cpp  TCalculateConsistentCoeff.lo  TCalculateDiagram.h  TCurrent.h  TDatasetDict.lo  TDatasetDict_rdict.pcm  TGridded.cpp  TGridded.h  TGriddedDict_rdict.pcm  TKinematics.cpp  TKinematics.lo  TKinematicsDict_rdict.pcm  TMatrixElement.cpp  TMatrixElement.h  TMatrixElementOld.lo  TMultiModel.cpp  TMultiModel.lo  TMultiModelDict_rdict.pcm  TStrangeCalc.cc  TStrangeCalc.lo  (+15 more)
strangecalc/src/.deps/: BetaIncomplete.Plo  DataHandler.Plo  FormFactorParametrization.Plo  FormFactorSpecification.Plo  FourVectorHandle.Plo  GammaStructure.Plo  Lagrangian.Plo  TAveragedObservable.Plo  TAveragedObservableDict.Plo  TCalculateCGLNCoeff.Plo  TCalculateCGLNMatrix.Plo  TDatasetDict.Plo  TGridded.Plo  TGriddedDict.Plo  TKinematics.Plo  TMatrixElement.Plo  TMatrixElementCGLN.Plo  TStrangeCalc.Plo  TStrangeModel.Plo  calcMatrixElement.Plo  fitting.Plo  io_specific.Plo  numtoa.Plo  simanneal.Plo  strange_func.Plo
strangecalc/src/.libs/: libStrangecalc.la  strangecalc
strangecalc/strangeweb/: Makefile  Makefile.am  strangeweb  strangeweb.cpp  strangeweb.cpp.in
strangecalc/strangeweb/.deps/: strangeweb.Po
strangecalc/tests/: Makefile  Observables.test  test_iso2+3.test
strangecalc/tests/setup_files/: GaugeInvariance_test_lorentz_errok  GaugeInvariance_test_varcutoff1_ok  Lagrangian_test.cpp  Lagrangian_test_cgln_ok  Makefile  fit_specification_test_iso2+3  fit_specification_test_iso6  pionHighE_test_errok  testTStrangeCalc.cc
strangecalc/tests/setup_files/classE/: fit_specification
strangecalc/tests/setup_files/classE/numinput/: formfactors.neutron
strangecalc/tests/setup_files/classH/numinput/: coupl.iso.1  formfactors.proton
strangecalc/tests/setup_files/classI/: fit_specification
strangecalc/tests/setup_files/classI/numinput/: phohelamp.in
strangecalc/tests/setup_files/classM/numinput/: coupl.iso.1
strangecalc/tests/setup_files/classN/numinput/: coupl.iso.1  varinfo.1
strangecalc/tests/setup_files/classT/numinput/: varinfo.1
strangecalc/tests/setup_files/iso11/numinput/: coupl.iso.1  formfactors.neutron  varinfo.1
strangecalc/tests/setup_files/iso8/numinput/: coupl.iso.8  formfactors.neutron  varinfo.8
strangecalc/tests/setup_files/numinput/: varinfo.1
strangecalc/wrapper/: AUTHORS  Makefile  Makefile.in  bootstrap  config.status  configure  configure.in  libtool
strangecalc/wrapper/autom4te.cache/: requests
strangecalc/wrapper/doc/: Doxyfile  Doxyfile.in  Makefile  Makefile.am  Makefile.in
strangecalc/wrapper/share/: Makefile
strangecalc/wrapper/share/data/: add_data_iso1.cpp  create_data_iso4.cpp  create_data_iso8.cpp  data_iso1_HE.root  data_iso2.root  data_iso3.root  data_iso4.root  data_iso5.root  data_iso6.root  data_radcap.root  electrodata_iso1.root
strangecalc/wrapper/src/: BetaIncomplete.cpp  BetaIncomplete.lo  DataHandler.cpp  DataHandler.h  ECoupl_ResonWrapper.h  FormFactor.h  FormFactor.lo  FormFactorParametrization.cpp  FormFactorParametrization.h  FormFactorSpecification.cpp  FormFactorSpecification.h  FourVector.h  FourVectorHandle.cpp  FourVectorHandle.h  FourVectorHandle.lo  GammaStructure.h  GammaStructure.lo  Lagrangian.cpp  Lagrangian.h  Lagrangian.lo  Makefile  Makefile.am  Matrix.lo  Structures.h  TAveragedObservable.cpp  TAveragedObservableDict.lo  TAveragedObservableDict_rdict.pcm  TAveragedObservableLinkDef.h  TCalcInfo.lo  TCalcInfoDict.lo  TCalcInfoDict_rdict.pcm  TCalculateCGLNCoeff.cpp  TCalculateCGLNMatrix.cpp  TCalculateCGLNMatrix.h  TCalculateCGLNMatrix.lo  TCalculateConsistentCoeff.cpp  TCalculateDiagram.cpp  TCalculateDiagram.lo  TCurrent.cpp  TCurrent.lo  (+49 more)
strangecalc/wrapper/src/.deps/: FormFactor.Plo  Matrix.Plo  TCGLNDiagnostic.Plo  TCalcInfo.Plo  TCalcInfoDict.Plo  TCalculateConsistentCoeff.Plo  TCalculateDiagram.Plo  TCurrent.Plo  TDataset.Plo  TKinematicsDict.Plo  TMatrixElementOld.Plo  TMultiModel.Plo  TMultiModelDict.Plo  TStrangeModelDict.Plo  TensorRank2.Plo  TensorRank3.Plo  TensorRank4.Plo  strangecalc.Po
strangecalc/wrapper/src/.libs/: libStrangecalc.lai
strangecalc/wrapper/strangeweb/: Makefile  Makefile.in  strangeweb  strangeweb.cpp
strangecalc/wrapper/tests/: GaugeInvariance_consistent.test  GaugeInvariance_lorentz.test  GaugeInvariance_n.test  Lagrangian.test  Lagrangian_cgln.test  Makefile  Makefile.in  TStrangeModel.test  pionHighE.test  strangecalc_chisquared.test  test_iso11.test
strangecalc/wrapper/tests/setup_files/: CCBoundaries.cpp  CGLN_test.cpp  GaugeInvariance_test.cpp  GaugeInvariance_test_lorentz_gaussian_ok  GaugeInvariance_test_y_ok  Lagrangian_test_gic_ok  Lagrangian_test_ok  Makefile  Makefile.in  Observable_test.cpp  Observable_test_ok  Speed_test.cpp  TStrangeModel_test.cpp  TStrangeModel_test_ok  fit_specification_test_iso1  fit_specification_test_iso11  fit_specification_test_iso8  makerootfile.cpp  ok_strangecalc_chisquared_test  ok_test_iso1  ok_test_iso2+3  ok_test_iso6  pionHighE_test.cpp  pionHighE_test_ok  test_strangecalc-wrapper.root
(+208 files in other folders)
